// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./ExternalLink.stories ButtonMode 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <a
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary mui-style-1bi6f53-MuiButtonBase-root-MuiButton-root"
    href="https://safe.global"
    rel="noreferrer noopener"
    tabindex="0"
    target="_blank"
  >
    <span
      class="MuiBox-root mui-style-u9xrjn"
    >
      Open Documentation
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall external-link-icon mui-style-tqxw8e-MuiSvgIcon-root"
        data-testid="OpenInNewRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.11 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1M14 4c0 .55.45 1 1 1h2.59l-9.13 9.13c-.39.39-.39 1.02 0 1.41s1.02.39 1.41 0L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1"
        />
      </svg>
    </span>
  </a>
</div>
`;

exports[`./ExternalLink.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways mui-style-r9pq5a-MuiTypography-root-MuiLink-root"
    href="https://safe.global"
    rel="noreferrer noopener"
    target="_blank"
  >
    <span
      class="MuiBox-root mui-style-u9xrjn"
    >
      Visit Safe Global
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall external-link-icon mui-style-tqxw8e-MuiSvgIcon-root"
        data-testid="OpenInNewRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.11 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1M14 4c0 .55.45 1 1 1h2.59l-9.13 9.13c-.39.39-.39 1.02 0 1.41s1.02.39 1.41 0L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1"
        />
      </svg>
    </span>
  </a>
</div>
`;

exports[`./ExternalLink.stories EmptyHref 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  This will not be a link
</div>
`;

exports[`./ExternalLink.stories NoChildren 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways mui-style-r9pq5a-MuiTypography-root-MuiLink-root"
    href="https://safe.global"
    rel="noreferrer noopener"
    target="_blank"
  >
    <span
      class="MuiBox-root mui-style-u9xrjn"
    >
      https://safe.global
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall external-link-icon mui-style-tqxw8e-MuiSvgIcon-root"
        data-testid="OpenInNewRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.11 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1M14 4c0 .55.45 1 1 1h2.59l-9.13 9.13c-.39.39-.39 1.02 0 1.41s1.02.39 1.41 0L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1"
        />
      </svg>
    </span>
  </a>
</div>
`;

exports[`./ExternalLink.stories WithCustomStyling 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways mui-style-thoo61-MuiTypography-root-MuiLink-root"
    href="https://etherscan.io"
    rel="noreferrer noopener"
    target="_blank"
  >
    <span
      class="MuiBox-root mui-style-u9xrjn"
    >
      View on Etherscan
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall external-link-icon mui-style-tqxw8e-MuiSvgIcon-root"
        data-testid="OpenInNewRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.11 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1M14 4c0 .55.45 1 1 1h2.59l-9.13 9.13c-.39.39-.39 1.02 0 1.41s1.02.39 1.41 0L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1"
        />
      </svg>
    </span>
  </a>
</div>
`;

exports[`./ExternalLink.stories WithoutIcon 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways mui-style-r9pq5a-MuiTypography-root-MuiLink-root"
    href="https://safe.global"
    rel="noreferrer noopener"
    target="_blank"
  >
    <span
      class="MuiBox-root mui-style-u9xrjn"
    >
      Visit Safe Global
    </span>
  </a>
</div>
`;
